--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -1,5 +1,5 @@
-<ul class="albums-list">
-	<li *ngFor="let album of albums">
-		<a href="albums/{{album.id}}">{{album.title}}</a>
+<ul>
+	<li *ngFor="let item of albums">
+		<a [routerLink]="item.id">{{item.title}}</a>
 	</li>
 </ul>
