--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,6 @@
 <h2>{{title}}</h2>
 
-Search works
+<form (submit)="searchArtists()">
+	<input type="text" name="artist" [(ngModel)]="artistName" placeholder="Nombre del artista...">
+	<button>Buscar</button>
+</form>
