--- a/src/app/global/components/progress-bar/progress-bar.component.css
+++ b/src/app/global/components/progress-bar/progress-bar.component.css
@@ -1,17 +1,18 @@
 .progress-bar{
+	height: 20px;
 	background-color: #f0f0f0;
-	height: 40px;
 }
 
-.progress-bar div {
+.progress-bar > div {
 	height: inherit;
-	background-color: #d1622b;
+	width: 30%;
+	background-color: #ff0000;
 }
 
-.progress-bar div.medium {
-	background-color: #d1b52b;	
+.progress-bar > div.medium {
+	background-color: #0000ff;
 }
 
-.progress-bar div.high {
-	background-color: #00ff00;	
+.progress-bar > div.high {
+	background-color: #00ff00;
 }
