--- a/src/app/global/components/progress-bar/progress-bar.component.html
+++ b/src/app/global/components/progress-bar/progress-bar.component.html
@@ -1,3 +1,3 @@
 <div class="progress-bar">
-	<div [appProgressStatus]="progress"></div>
+	<div [ngStyle]="{'width': progress+'%'}" [appProgressBarStatus]="progress"></div>
 </div>
