--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <router-outlet></router-outlet>
+	<app-header></app-header>
+	<div class="container">
+	  <router-outlet></router-outlet>
+	 </div>
 </div>
 
