--- a/src/app/artists/artist-details/artist-details.component.html
+++ b/src/app/artists/artist-details/artist-details.component.html
@@ -1,12 +1,18 @@
 <div *ngIf="isDataLoaded">
 
 	<h3>Artist: {{artist.name}}</h3>
-	<img [src]="imageUrl" alt="">
 
-	<p *ngIf="artist.followers">Followers: {{artist.followers.total | number}}</p>
+	<div class="row">
+		<div class="col-md-6">
+			<img [src]="imageUrl" alt="">
+		</div>
+		<div class="col-md-6">
+			<p *ngIf="artist.followers">Followers: {{artist.followers.total | number}}</p>
 
-	<app-progress-bar [progress]="artist.popularity"></app-progress-bar>
+			<app-progress-bar [progress]="artist.popularity"></app-progress-bar>
+		</div>
+	</div>
 
 </div>
 
-<button (click)="goBack()">Regresar</button>
+<button (click)="goBack()" class="btn btn-primary">Regresar</button>
