--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,12 @@
 <h2>{{title}}</h2>
 
 <form (submit)="searchArtists()">
-	<input type="text" name="artist" [(ngModel)]="artistName" placeholder="Nombre del artista...">
-	<button>Buscar</button>
+	<div class="row">
+		<div class="col-md-9">
+			<input type="text" name="artist" [(ngModel)]="artistName" placeholder="Nombre del artista..." class="form-control">			
+		</div>
+		<div class="col-md-3">
+			<button class="btn btn-secondary">Buscar</button>			
+		</div>
+	</div>
 </form>
